# ffflutter

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/include/: config.h
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/fifthai/ffflutter/: FfflutterPlugin.kt
android/src/native/: export.cpp
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/fifthai/ffflutter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: ffflutter.podspec
ios/Classes/: FfflutterPlugin.h  FfflutterPlugin.m  native_ffmpeg.cpp
lib/: ffflutter.dart
lib/widget/: player.dart  util.dart  video_layer.dart
test/: ffflutter_test.dart
